--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Aubrey&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amarante&family=Aubrey&display=swap');
+
+
+
 *{border: 1px }
+
+
  
  .main{
-   background: lightblue;
+   background: #370617;
    width:80%;
   margin: 0 auto; /* center */
  }
@@ -10,8 +17,13 @@
    display:flex;
    justify-content:space-around;
    position: sticky;
-   background-color: lightblue;
-   top:0;
+   background-color: #6A040F;
+   top: 0px;
+   height: 4vh;
+   font-size: 2vh;
+   font-family: "Aubrey", serif;
+   font-weight: 400;
+   font-style: normal;  
    
    
  }
@@ -36,7 +48,11 @@
 }
 
 p{
-  font-size: 2vw
+  font-size: 2vw;
+  font-family: "Aubrey", serif;
+  font-weight: 400;
+  font-style: normal;
+  color: white
 }
 
 @media screen and (max-width: 500px) {
@@ -48,3 +64,16 @@ p{
   
 }
 
+a{color: aliceblue; text-decoration: none;}
+
+.container{
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+.text{
+  position: absolute;
+  top: 8px;
+  left: 16px;
+}
